Fix daily email error. #patch

--- a/templates/emails/welcome_email.html
+++ b/templates/emails/welcome_email.html
@@ -7,6 +7,7 @@
             <li>Please click on <a href="{verify_link}" target="_blank">this link</a> to verify your email address.</li>
             <li>And transfer the participation fee of £5 to ????????????????????????</li>
         </ul>
+        <img src="{qr_image_link}" width="200px">
         <p>The rules summarized:</p>
         <ul>
             <li>Before the first game starts (i.e. Saturday June 14th - 8:00 p.m.), predict the 2024 EURO champion (you cannot change it after June 14th - 8:00 p.m.).</li>
