Fix errors. #patch

--- a/templates/emails/welcome_email.html
+++ b/templates/emails/welcome_email.html
@@ -4,13 +4,13 @@
         <p>Thanks for signing up to the MS Risk 2024 EURO Prediction Game!</p>
         <p>To finalise your registration:</p>
         <ul>
-            <li>Please click on <a href="{verify_link}" target="_blank">this link</a> to verify your email address.</li>
-            <li>And transfer the participation fee of £5 to ????????????????????????</li>
+            <li>Please click <a href="{verify_link}" target="_blank">this link</a> to verify your email address.</li>
+            <li>And transfer the participation fee of £5 to ???????????????????????? or use the QR-Code below:</li>
         </ul>
         <img src="{qr_image_link}" width="200px">
         <p>The rules summarized:</p>
         <ul>
-            <li>Before the first game starts (i.e. Saturday June 14th - 8:00 p.m.), predict the 2024 EURO champion (you cannot change it after June 14th - 8:00 p.m.).</li>
+            <li>Before the first game starts (i.e. Saturday, June 14th - 8:00 p.m.), predict the 2024 EURO champion (after June 14th - 8:00 p.m. a change is no longer possible).</li>
             <li>Before each group's first match kicks off, predict that group's winner (you cannot change your selection after the first group match kicks-off).</li>
             <li>Before each match starts, predict its final score (you cannot change your prediction after kick-off).</li>
         </ul>
