Fix errors. #patch

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -88,7 +88,7 @@
 
                 <div class="container mb-2">
                     <div class="row">
-                        {% if editable or tournament_form.editable.value is False %}
+                        {% if edit or tournament_form.editable.value is False %}
                             <div class="col-6 p-2">
                                 <div class="w-75 border rounded m-2 mx-auto">
                                     <a class="normal-text-link"
@@ -113,7 +113,6 @@
                                                                       d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
                                                             </svg>
                                                         {% endif %}
-                                                        {{ tournament_form.tournament_id }}
                                                     </div>
                                                     <div class="col-2 pe-1 text-end">
                                                         <img class="m-0" src="/static/trophy.png" height="30px"
@@ -150,7 +149,7 @@
                                         </div>
                                     </div>
                                     <div class="row py-2">
-                                        {{ tournament_form.charity|safe }}
+                                        {{ tournament_form.charity|safe }}{{ tournament_form.tournament_id }}
                                     </div>
                                     {% if tournament_form.text %}
                                         <div class="row fst-italic text-secondary">
