--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="hero-winner">
-        <div class="hero-text" style="max-width: 80%;">
+        <div class="hero-text h-100 overflow-auto" style="max-width: 80%;">
             <div class="container p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
 
                 <div class="row">
