Add option to manually re-send emails, add payment remidner email, minor formatting changes to the daily email and match schedule view. #patch

--- a/templates/emails/welcome_email.html
+++ b/templates/emails/welcome_email.html
@@ -7,7 +7,7 @@
             <li>Please click <a href="{verify_link}" target="_blank">this link</a> to verify your email address.</li>
             <li>And transfer the participation fee of £5 to ???????????????????????? or use the QR-Code below:</li>
         </ul>
-        <img src="{qr_image_link}" width="200px">
+        <img src="{qr_image_link}" width="200">
         <p>The rules summarized:</p>
         <ul>
             <li>Before the first game starts (i.e. Saturday, June 14th - 8:00 p.m.), predict the 2024 EURO champion (after June 14th - 8:00 p.m. a change is no longer possible).</li>
