--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -25,7 +25,7 @@
             </div>
 
 
-            <div class="container m-3">
+            <div class="container m-3" style="width: 100%; max-width: 100%;">
                 <hr class="featurette-divider my-4">
                 {% for date, match_lst in match_dict.items %}
                     <h4>{{ date|date:'l j F o' }}</h4>
