Improve Match Prediction View ordering. #patch

--- a/templates/predictions/Match.html
+++ b/templates/predictions/Match.html
@@ -35,7 +35,10 @@
                         <thead>
                         <tr>
                             <th scope="col">Name</th>
-                            <th scope="col">Last</th>
+                            <th scope="col">
+                                <img class="m-0" src="{{ flag_a }}" height="25px" width="25px">
+                                <img class="m-0" src="{{ flag_b }}" height="25px" width="25px">
+                            </th>
                             <th scope="col">Points</th>
                         </tr>
                         </thead>
