Fix leaderboard sorting and Group/Tournament heading highlighting. #patch

--- a/templates/predictions/GroupAndTournament.html
+++ b/templates/predictions/GroupAndTournament.html
@@ -23,7 +23,7 @@
                     {% for prediction, user_lst in predictions.items %}
                         <hr class="featurette-divider my-3">
 
-                        <div class="row">
+                        <div class="row highlighted">
                             <div class="col-3"></div>
                             <div class="col-6 h4">{{ prediction }}</div>
                             <div class="col-3 fst-italic text-secondary">
