--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
             cursor: pointer;
         }
 
-        table.transparent-table tr.highlighted {
+        .highlighted {
             background-color: rgba(255, 255, 255, 0.15);
             font-weight: bold;
         }
