--- a/templates/predictions/Match.html
+++ b/templates/predictions/Match.html
@@ -18,6 +18,9 @@
                             Predictions</a>
                     </div>
                 </div>
+                <div class="row">
+                    <p>The correct match score is worth 5 points, the correct winner 3 points.<br>
+                </div>
 
                 {% if predictions|length == 0 %}
 
