Impove <meta> tags for link preview. #patch

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-6 h2 text-center">{{ title }}</div>
                 <div class="col-3 text-end">
-                    <a class="text-end btn btn-primary text-end" href="{% url 'predictions' %}">Edit My Predictions</a>
+                    <a class="text-end btn btn-primary text-end" href="{% url 'predictions' %}">Go to My Predictions</a>
                 </div>
             </div>
 
