--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}No Title{% endblock %} | MS Risk 2024 EURO</title>
-    <meta name="title" content="2024 EURO Prediction Game — MS Risk">
+    <meta name="title" content="{% block title %}No Title{% endblock %} | MS Risk 2024 EURO">
     <meta name="description" content="Predict the next champion, group winners and match outcomes to win the pot.">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="2024 EURO Prediction Game — MS Risk">
+    <meta property="og:title" content="{% block title %}No Title{% endblock %} | MS Risk 2024 EURO">
     <meta property="og:description"
           content="Predict the next champion, group winners and match outcomes to win the pot.">
     <meta property="og:image" content="/static/link_preview.jpg">
