--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="hero-my">
-        <div class="container bg-transparent h-100 overflow-auto" style="max-width: 85%;">
+        <div class="container bg-transparent" style="max-width: 85%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
 
             <div class="bg-white my-4 p-2 shadow-lg rounded">
                 <div class="row my-2 mx-4">
