--- a/templates/predictions/GroupAndTournament.html
+++ b/templates/predictions/GroupAndTournament.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="hero-winner">
-        <div class="hero-text h-100 py-5 overflow-auto" style="max-width: 80%;">
+        <div class="hero-text py-5" style="max-width: 80%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
             <div class="container p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
 
                 <div class="row">
