--- a/templates/registration/too_late.html
+++ b/templates/registration/too_late.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="hero-home">
-        <div class="hero-text py-5 h-100 overflow-auto">
+        <div class="hero-text py-5" style="height: 100vh; overflow-y: auto; overflow-x: hidden;">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
                 <h2>Too Late!<br>Sign Up is closed as the Tournament already kicked-off!</h2>
                 <p>Now you can only watch...</p>
