Group prediction formatting. #patch

--- a/templates/predictions/GroupAndTournament.html
+++ b/templates/predictions/GroupAndTournament.html
@@ -38,7 +38,7 @@
                             <a class="col-6 h4 my-1 normal-text-link"
                                href="{% url 'country-schedule' country_name=prediction|clean_str %}"
                             >{{ prediction }}</a>
-                            <div class="col-3 fst-italic text-secondary">
+                            <div class="col-3 small p-2 fst-italic">
                                 {% if user_lst.0.points is not None %}
                                     (Points: {{ user_lst.0.points }})
                                 {% endif %}
