Exclude penalties shoot-out from prediction game scores and be able to manually trigger api refresh. #minor

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -280,11 +280,9 @@
                     {% endif %}
 
                     <div class="row fst-italic text-secondary text-center mb-3">
-                        <small>Probability of predicting a match winner is 33% for the group-phase and 50% thereafter.
-                            With
-                            36 group-phase matches and 15 other,<br>a completely random pick is expected to result in
-                            19.5
-                            correct match winners. Can you beat randomness?</small>
+                        <small>Probability of predicting a match winner is 33%. With 51 matches, a completely random pick is expected to result in 17 correct match winners. Can you beat randomness?<br>
+                            For games in the <b>knock-out stages</b> predict the score & match winner after both full time and any extra time <b>but excluding the penalties shoot-out</b>.
+                        </small>
                     </div>
 
                     <table>
