Minor UI text update highlighting exclusion of penalties shoot-out from prediction game scores. #patch

--- a/templates/predictions/Match.html
+++ b/templates/predictions/Match.html
@@ -18,7 +18,7 @@
                             Predictions</a>
                     </div>
                 </div>
-                {% if is_group_phase %}
+                {% if is_group_phase is False %}
                     <div class="row">
                         <p><i>As per the rules, for games in the <u>knock-out stages</u> the score & match winner<br>
                             to predict is <u>excluding the penalties shoot-out</u>.</i></p>
