Add password reset page. #minor

--- a/templates/registration/password_reset.html
+++ b/templates/registration/password_reset.html
@@ -1,23 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Log In{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
     <div class="hero-home">
         <div class="hero-text">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
-                <h2>Log In</h2>
-                <form action="{% url 'log-in' %}" method="post" name="log-in">
+                <h2>Reset Password</h2>
+                <form action="{% url 'password_reset' %}" method="post" name="password_reset">
                     {% csrf_token %}
                     <div class="mb-3" style="text-align: center; min-width: 375px;">
                     <div class="form-group mx-auto p-1" style="text-align: left; width: 85%;">
                         <label for="exampleInputEmail1">Email address</label>
-                        {{ form.username }}
-                    </div>
-                    <div class="form-group mx-auto p-1" style="text-align: left; width: 85%;">
-                        <label for="exampleInputPassword1">Password</label>
-                         {{ form.password }}
-                        <div class="text-end small pt-2 pe-2"><a href="{% url 'password_reset' %}" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; font-style: italic;">Forgot password?</a></div>
+                        <input type="email" name="email" autocomplete="email" maxlength="254" class="form-control" placeholder="Enter email" autofocus="" required="" id="id_email">
                     </div>
 
                     {% if form.errors %}
@@ -36,8 +31,8 @@
                     {% endif %}
 
                     <div class="d-flex justify-content-between mx-auto p-1 mt-3" style="width: 85%;">
-                        <a class="btn btn-outline-primary" href="{% url 'sign-up' %}">Take part / Sign up</a>
-                        <input type="submit" class="btn btn-primary" value="Log In">
+                        <a class="btn btn-outline-primary" href="{% url 'log-in' %}">Go to Log In</a>
+                        <input type="submit" class="btn btn-primary" value="Reset Password">
                     </div>
                 </form>
             </div>
