--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,23 +1,22 @@
 {% extends "base.html" %}
 
-{% block title %}Log In{% endblock %}
+{% block title %}Set New Password{% endblock %}
 
 {% block content %}
     <div class="hero-home">
         <div class="hero-text">
             <div class="p-5 rounded shadow" style="background: rgba(0,0,0,0.7);">
-                <h2>Log In</h2>
-                <form action="{% url 'log-in' %}" method="post" name="log-in">
+                <h2>Set New Password</h2>
+                <form  method="post" name="password-reset-confirm">
                     {% csrf_token %}
                     <div class="mb-3" style="text-align: center; min-width: 375px;">
-                    <div class="form-group mx-auto p-1" style="text-align: left; width: 85%;">
-                        <label for="exampleInputEmail1">Email address</label>
-                        {{ form.username }}
+                    <div class="form-group w-75 mx-auto p-1" style="text-align: left;">
+                        <label for="exampleInputPassword1">New Password</label>
+                        <input type="password" name="new_password1" autocomplete="new-password" required="" class="form-control" placeholder="Password" autofocus="" aria-describedby="id_new_password1_helptext" id="id_new_password1">
                     </div>
-                    <div class="form-group mx-auto p-1" style="text-align: left; width: 85%;">
-                        <label for="exampleInputPassword1">Password</label>
-                         {{ form.password }}
-                        <div class="text-end small pt-2 pe-2"><a href="{% url 'password_reset' %}" style="color: rgba(255, 255, 255, 0.8); text-decoration: none; font-style: italic;">Forgot password?</a></div>
+                    <div class="form-group w-75 mx-auto p-1" style="text-align: left;">
+                        <label for="exampleInputPassword1">Confirm New Password</label>
+                        <input type="password" name="new_password2" autocomplete="new-password" required="" class="form-control" placeholder="Password" aria-describedby="id_new_password2_helptext" id="id_new_password2">
                     </div>
 
                     {% if form.errors %}
@@ -35,9 +34,8 @@
                         {% endfor %}
                     {% endif %}
 
-                    <div class="d-flex justify-content-between mx-auto p-1 mt-3" style="width: 85%;">
-                        <a class="btn btn-outline-primary" href="{% url 'sign-up' %}">Take part / Sign up</a>
-                        <input type="submit" class="btn btn-primary" value="Log In">
+                    <div class="d-flex justify-content-around mx-auto p-1 mt-3" style="width: 85%;">
+                        <input type="submit" class="btn btn-primary" value="Update Password">
                     </div>
                 </form>
             </div>
