--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,11 @@
         {% if user.is_authenticated %}
             <a class="btn btn-primary shadow" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
         {% else %}
+            {% if tournament_editable %}
             <a class="btn btn-primary m-1 shadow" href="{% url 'sign-up' %}">Take part / Sign up</a>
+            {% else %}
+            <a class="btn btn-primary m-1 shadow" href="{% url 'log-in' %}">Log In</a>
+            {% endif %}
             <a class="btn btn-outline-primary m-1 shadow" href="{% url 'leaderboard' %}">Go to Leaderboard</a>
         {% endif %}
     </div>
