--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -5,7 +5,8 @@
 
 {% block content %}
     <div class="hero-my">
-        <div class="container bg-transparent" style="max-width: 85%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
+        <div class="container bg-transparent"
+             style="max-width: 85%; height: 100vh; overflow-y: auto; overflow-x: hidden;">
 
             <div class="bg-white my-4 p-2 shadow-lg rounded">
                 <div class="row my-2 mx-4">
@@ -67,6 +68,13 @@
 
             </div>
 
+            {% if stats_data is not None %}
+                <div class="bg-white my-4 p-2 shadow-lg rounded">
+                    {% include 'stats.html' %}
+                </div>
+            {% endif %}
+
+
             <form class="bg-white my-4 p-2 shadow-lg rounded" action="{% url 'predictions' %}" method="post"
                   name="tournament">
                 {% csrf_token %}
@@ -102,10 +110,14 @@
                                                         {{ tournament_form.tournament_name.value }}
                                                         Champion
                                                         {% if tournament_form.editable.value is False %}
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-zoom-in" viewBox="0 0 16 16" style="margin: 0px 0px 5px 8px;">
-                                                              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
-                                                              <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
-                                                              <path fill-rule="evenodd" d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                                                                 height="14" fill="currentColor" class="bi bi-zoom-in"
+                                                                 viewBox="0 0 16 16" style="margin: 0px 0px 5px 8px;">
+                                                                <path fill-rule="evenodd"
+                                                                      d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
+                                                                <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
+                                                                <path fill-rule="evenodd"
+                                                                      d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
                                                             </svg>
                                                         {% endif %}
                                                     </div>
@@ -200,10 +212,15 @@
                                                         <div class="col-6 ps-0">
                                                             <span>{{ form.group_name.value }}</span>
                                                             {% if form.editable.value is False %}
-                                                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-zoom-in" viewBox="0 0 16 16" style="margin: 0px 0px 5px 8px;">
-                                                                  <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
-                                                                  <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
-                                                                  <path fill-rule="evenodd" d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                                                                     height="14" fill="currentColor"
+                                                                     class="bi bi-zoom-in" viewBox="0 0 16 16"
+                                                                     style="margin: 0px 0px 5px 8px;">
+                                                                    <path fill-rule="evenodd"
+                                                                          d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
+                                                                    <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
+                                                                    <path fill-rule="evenodd"
+                                                                          d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
                                                                 </svg>
                                                             {% endif %}
                                                             {{ form.group_id }}
@@ -280,8 +297,10 @@
                     {% endif %}
 
                     <div class="row fst-italic text-secondary text-center mb-3">
-                        <small>Probability of predicting a match winner is 33%. With 51 matches, a completely random pick is expected to result in 17 correct match winners. Can you beat randomness?<br>
-                            For games in the <b>knock-out stages</b> predict the score & match winner after both full time and any extra time <b>but excluding the penalties shoot-out</b>.
+                        <small>Probability of predicting a match winner is 33%. With 51 matches, a completely random
+                            pick is expected to result in 17 correct match winners. Can you beat randomness?<br>
+                            For games in the <b>knock-out stages</b> predict the score & match winner after both full
+                            time and any extra time <b>but excluding the penalties shoot-out</b>.
                         </small>
                     </div>
 
@@ -343,10 +362,14 @@
                                 {{ form.text.value }}
                                 </span>
                                         {% if form.editable.value is False %}
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-zoom-in ms-auto me-3 my-auto" viewBox="0 0 16 16" style="margin: 0px 0px 5px 8px;">
-                                              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
-                                              <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
-                                              <path fill-rule="evenodd" d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                                                 fill="currentColor" class="bi bi-zoom-in ms-auto me-3 my-auto"
+                                                 viewBox="0 0 16 16" style="margin: 0px 0px 5px 8px;">
+                                                <path fill-rule="evenodd"
+                                                      d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11M13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0"/>
+                                                <path d="M10.344 11.742q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1 6.5 6.5 0 0 1-1.398 1.4z"/>
+                                                <path fill-rule="evenodd"
+                                                      d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5"/>
                                             </svg>
                                         {% endif %}
                                     </a>
